--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -142,13 +142,23 @@ mixin creditosFooter(ruta)
 
 
                     p.footer-texto.mb-2
-                        | #[strong Julieth Paola Vital López]<br/>   
+                        | #[strong Julieth Paola Vital López]<br/>
+                        | #[strong María Isabel Román Rueda]<br/>    
                         span.text-small Revisora de estilo<br/>
 
                     p.footer-texto
                         span.text-small.text-uppercase Centro para la Industria de la Comunicación Gráfica 
                         br
                         span.text-small Regional Distrito Capital
+
+                    p.footer-texto.mb-2
+                        | #[strong María Isabel Román Rueda]<br/>    
+                        span.text-small Revisoras de estilo<br/>
+
+                    p.footer-texto
+                        span.text-small.text-uppercase Centro para la Industria del diseño y la manofactura
+                        br
+                        span.text-small Regional Santander
          
                 .col-12.col-md-6
                     h4.footer-subtitulo-2.mt-0 
@@ -164,38 +174,25 @@ mixin creditosFooter(ruta)
 
                     p.footer-texto
                         | #[strong Leyson Fabian Castaño Perez]<br/>   
-                        span.text-small Integración de recursos y pruebas<br/>
+                        span.text-small Soporte organizacional<br/>
                         span.text-small.text-uppercase centro de comercio y servicios 
                         br
                         span.text-small Regional Tolima
 
                     p.footer-texto
-                        | #[strong José Jaime Luis Tang Pinzón ]<br/>   
-                        span.text-small Diseñador Web<br/>
-                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
-                        br
-                        span.text-small Regional Santander
-                    p.footer-texto
-                        | #[strong Juan Daniel polanco Muñoz]<br/>   
-                        span.text-small Diseñador Web<br/>
-                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
-                        br
-                        span.text-small Regional Santander
+                        | #[strong José Jaime Luis Tang Pinzón]<br/>
+                        | #[strong Juan Daniel polanco Muñoz ]<br/> 
+                        | #[strong Zuleidy María Ruiz Torres]<br/>
+                        | #[strong Oleg Litvin]<br/>     
+                        | #[span.text-small Diseño Web y producción audiovisual]<br/>
 
-                    p.footer-texto
-                        | #[strong Oleg Litvin]<br/>   
-                        span.text-small Productor Audiovisual<br/>
-                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
-                        br
-                        span.text-small Regional Santander
-
-                    p.footer-texto
+                        p.footer-texto
                         | #[strong Gustavo Adolfo Marún Suárez]<br/>   
                         span.text-small Desarrollador Front End<br/>
+                        
                         span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
                         br
                         span.text-small Regional Santander
-
 
                     h4.footer-subtitulo-2.mt-5
                         .fa.fa-caret-right.mr-2
