--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -20,14 +20,14 @@
               .card.card_grey
                 .card-body
                   img.img-a(src='assets/images/pages/ilustraciones/book.png').img-icon 
-                  P.text.left.mt-5 Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras
+                  P.text.left.mt-5 Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras. 
            
             .sub-line.mt-5
                 h2.mt-5#tema-32 3.2.  Búsqueda de información
 
             p La búsqueda y selección de información es muy importante para sustentar la investigación. Definir los criterios de búsqueda, identificar el tipo de información que sustenta el proyecto investigativo requiere de conocimientos y habilidades para buscar información relevante. 
 
-            p Saber buscar significa delimitar el tema con los conceptos relevantes que los sustenta, una vez se tiene claridad al respecto se identifican bases de datos especializadas, y material bibliográfico y cibergráfica relevante a estudiar. Para apoyar las búsquedas de información, en la biblioteca virtual del SENA http://biblioteca.sena.edu.co/, puede encontrar la más importante información a consultar según necesidad.
+            p Saber buscar significa delimitar el tema con los conceptos relevantes que los sustenta, una vez se tiene claridad al respecto se identifican bases de datos especializadas, y material bibliográfico y cibergráfica relevante a estudiar. Para apoyar las búsquedas de información, en la biblioteca virtual del SENA <a href="http://biblioteca.sena.edu.co/" target="_blank">http://biblioteca.sena.edu.co//</a> , puede encontrar la más importante información a consultar según necesidad.
 
         .jumbotron.bg-5.mt-5
           .row.justify-content-center.align-items-center
