--- a/source/pug/pages/referencias.pug
+++ b/source/pug/pages/referencias.pug
@@ -6,7 +6,8 @@ include ../mixins/functions
         h1 Referencias bibliográficas
 
     .jumbotron.bg-white.referencias
-        +referenciaItem("Guijosa, C. (2018). 7 habilidades necesarias para los trabajos del futuro. https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro")
+
+        p.flex-grow-1 Guijosa, C. (2018). 7 habilidades necesarias para los trabajos del futuro. <a href="https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro" target="_blank">https://observatorio.tec.mx/edu-news/7-habilidades-necesarias-para-los-trabajos-del-futuro</a>
 
         +referenciaItem("Hernández Sampieri, R., Fernández Collado, C., & Baptista, P. (2014). Metodología de la Investigación. Sexta Edición. Mc Graw Hill.")
 
