--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -92,7 +92,7 @@
               img.mt-2(src="assets/images/pages/ilustraciones/line.jpg").img-icon
 
       .sub-line.mt-5  
-        h2#tema-21 2.1.  Tema e idea de investigación
+        h2#tema-21 2.1  Tema e idea de investigación
       .jumbotron.bg-5.mt-5
           .row.justify-content-center.align-items-center
               .col-auto
