--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -154,7 +154,7 @@
 
         .col-8.col-md-6 
          
-          p.mt-8 A de la pregunta se construye el fundamento metodológico, se determinan los objetivos, se establece el marco teórico, se determina el nivel y profundidad, se caracteriza la población objeto de estudio, se determinan los métodos, técnicas e instrumentos de investigación. Antes de determinar la pregunta de investigación es importante realizar lecturas sobre el tema, identificar ideas importantes de la situación problémica, entender el contexto y delimitar la investigación. Para ampliar el tema puede observar el video sobre la pregunta de investigación.
+          p.mt-8 A partir de la pregunta se construye el fundamento metodológico, se determinan los objetivos, se establece el marco teórico, se determina el nivel y profundidad, se caracteriza la población objeto de estudio, se determinan los métodos, técnicas e instrumentos de investigación. Antes de determinar la pregunta de investigación es importante realizar lecturas sobre el tema, identificar ideas importantes de la situación problémica, entender el contexto y delimitar la investigación. Para ampliar el tema puede observar el video sobre la pregunta de investigación.
           p.mt-3 Para ampliar el tema puede observar el video sobre la pregunta de investigación.
 
       .mt-5.embed-responsive.embed-responsive-16by9
