--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -188,7 +188,7 @@
            
               p.mt-6 Exploratorio: observa, rastrea pregunta indaga, compara 
 
-              p.mt-4 Descriptivo: describe, los hechos a partir de observar, rastrear 
+              p.mt-4 Descriptivo: Descriptivo: describe, los hechos a partir de observar, rastrear preguntar. indagar, comparar
 
               p.mt-5 Analítico: estudia minuciosamente los hechos para analizarlos y establecer nuevas 
 
@@ -247,9 +247,9 @@
         
         .col-6.col-md-6  
          
-          P.mt-5 Se caracteriza por controlar variables, atributos y características del objeto de estudio. Ejemplo (edad, nivel educativo,) compara
+          P.mt-5 Se caracteriza por controlar variables, atributos y características del objeto de estudio. Ejemplo (edad, nivel educativo,) compara las variables objeto de estudio.
             .col-4
-              img.mt-5(src="assets/images/pages/ilustraciones/line.jpg").img-icon 
+              img.mt-2(src="assets/images/pages/ilustraciones/line.jpg").img-icon 
         
         .col-6.col-md-6  
           .row.justify-content-center.align-items-center
@@ -405,6 +405,8 @@
 
             .col-auto
                   img.img-a.md-10(src="assets/images/pages/ilustraciones/24.jpg").img-fluid
+
+        p.mt-5 Características de las técnicas de recolección datos:
     
       table.table.table-bordered.table-striped.mt-5
             thead
