--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -16,7 +16,7 @@
               .card.card_grey
                 .card-body
                   img.img-a(src='assets/images/pages/ilustraciones/head.png').img-icon
-                  P.text.left.mt-5 Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurados por otros investigadores, entre los más destacados están, revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones   de primera mano, cartas entre otras.  Sus principales características son su originalidad como evidencia directa de su autor.
+                  P.text.left.mt-5 Las fuentes primarias son documentos que no han sido editados, reinterpretados o reestructurados por otros investigadores, entre los más destacados están, revistas, testimonios orales, pinturas, archivos multimedia pintura o grabaciones   de primera mano, cartas entre otras.  Sus principales características son su originalidad como evidencia directa de su autor.
               .card.card_grey
                 .card-body
                   img.img-a(src='assets/images/pages/ilustraciones/book.png').img-icon 
