--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -6,9 +6,7 @@
         .row.justify-content-center.align-items-center
             .col-auto
               
-              img.img-responsive(src='assets/images/pages/ilustraciones/29.jpg')
-              
-              .centrado6 Las fuentes de información es el conjunto de documentos y datos confiables que contienen conocimientos útiles para consultarse en el desarrollo de una investigación.
+              img.img-responsive(src='assets/images/pages/ilustraciones/29.png')
         .sub-line.mt-5
             h2.mt-5#tema-31 3.1.  Fuentes primarias y secundarias
 
@@ -84,6 +82,6 @@
                 .sub-ecored
                 .col-auto
                     
-                    img.mt-5(src='assets/images/pages/ilustraciones/36.jpg').img-float-1
+                    img.mt-5.img-responsive(src='assets/images/pages/ilustraciones/36.png').img-float-1
                     
-                    .centrado7 El informe de investigación es el documento donde se registran el resultado final del proyecto, lo componen, un título, resumen, introducción, marco teórico, justificación, objetivos y pregunta de investigación, metodología, resultados, discusiones, conclusiones y referencias bibliográficas. Una vez se elabora el informe se renueva el ciclo investigativo, con una nueva pregunta problematizadora que permita continuar profundizando en el tema desarrollado, o un nuevo tema de interés para el investigador.
+                    
